Minor polishing, proofread pdf.

--- a/erik_alapaa_cv_overleaf.tex
+++ b/erik_alapaa_cv_overleaf.tex
@@ -219,13 +219,15 @@
 
 % Keep this short, simple and straigth to point
 
-\section{Hands-on, research-trained tech lead and near-metal C++ expert at Google}
-\small{ Borg(*) SRE. Specialist in Unix and hard real-time C/C++ at
-  Google. Research degree (Licentiate) in Applied Mathematics from Chalmers,
-  Gothenburg. M.Sc. in Engineering Physics from Luleå University of
-  Technology. +20 years of industry experience, mostly on \textbf{near-metal
-    programming in C and C++}. Worked on everything from \textbf{192k RAM}
-  embedded controllers up to Google's world-scale infrastructure.
+\section{Hands-on, research-trained tech lead, software developer and
+  near-metal C++ expert at Google}
+\small{ Software developer in Borg(*) SRE. Specialist in Unix and hard
+  real-time C/C++ at Google. Research degree (Licentiate) in Applied
+  Mathematics from Chalmers, Gothenburg. M.Sc. in Engineering Physics from
+  Luleå University of Technology. +20 years of industry experience, mostly on
+  \textbf{near-metal programming in C and C++}. Worked on everything from
+  \textbf{192k RAM} embedded controllers up to Google's world-scale
+  infrastructure.
 
   (*) \emph{Borg is the cluster operating system that controls all Google
   datacenters and runs almost all infrastructure at Google.}  }
@@ -234,6 +236,7 @@
 
 %--------------SKILLS------------------------
 % Add or remove resumeSectionTypes according to your needs
+\section{Roles I am looking for: Pure SWE, research, architect, tech lead.}
 
 \section{Technical Skills}
 \resumeHeadingListStart{}
@@ -243,7 +246,7 @@
     \resumeSectionType{Dev Tools}{:}{Clang, GCC, GDB, Git, Valgrind, Clang
       Thread Safety Analysis, Compiler Explorer (godbolt.org)}
     \resumeSectionType{Frameworks}{:}{Boost Graph Library, Pthreads, Google
-      Protobuf, Google Abseil C++ Common Libraries}
+      Protobuf (open source), Google Abseil C++ Common Libraries (open source)}
 
 \resumeHeadingListEnd{}
 %--------------------------------------------
