--- a/erik_alapaa_cv_overleaf.tex
+++ b/erik_alapaa_cv_overleaf.tex
@@ -246,8 +246,9 @@
     \resumeSectionType{Dev Tools}{:}{Clang, GCC, GDB, Git, Valgrind (Memcheck,
       Cachegrind, Callgrind, Helgrind), Clang
       Thread Safety Analysis, Compiler Explorer (godbolt.org)}
-    \resumeSectionType{Frameworks}{:}{Boost Graph Library, Pthreads, Google
-      Protobuf (open source), Google Abseil C++ Common Libraries (open source)}
+    \resumeSectionType{Frameworks}{:}{Boost Graph Library, Pthreads, gRPC,
+      Google Protobuf (open source), Google Abseil C++ Common Libraries (open
+      source)}
 
 \resumeHeadingListEnd{}
 %--------------------------------------------
