Added e.g awk/sed, Matlab, Maple

--- a/erik_alapaa_cv_overleaf.tex
+++ b/erik_alapaa_cv_overleaf.tex
@@ -241,14 +241,16 @@
 \section{Technical Skills}
 \resumeHeadingListStart{}
 
-    \resumeSectionType{Languages}{:}{C++, C, Python}
+    \resumeSectionType{Languages}{:}{C++, C, Python, Perl, bash, awk/sed,
+      Matlab, Maple}
     \resumeSectionType{Databases}{:}{Google Cloud BigQuery}
     \resumeSectionType{Dev Tools}{:}{Clang, GCC, GDB, Git, Valgrind (Memcheck,
       Cachegrind, Callgrind, Helgrind), Clang
       Thread Safety Analysis, Compiler Explorer (godbolt.org)}
-    \resumeSectionType{Frameworks}{:}{Boost Graph Library, Pthreads, gRPC,
-      Google Protobuf (open source), Google Abseil C++ Common Libraries (open
-      source)}
+
+    \resumeSectionType{Frameworks/APIs}{:}{Boost Graph Library, Pthreads, gRPC,
+      BSD sockets, TCP/IP, SCTP, Google Protobuf (open source), Google Abseil
+      C++ Common Libraries (open source)}
 
 \resumeHeadingListEnd{}
 %--------------------------------------------
